Remove posts from user deleted

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Social network for developer",
   "main": "server.js",
   "scripts": {
+    "postinstall": "npm run build",
     "start": "nodemon server.js"
   },
   "author": "AsaFullStack",
